new source: prometheus-exporter
- add `prometheus-exporter` as new known source in module bootstrap
- add `prometheus-exporter` support in readme template generator
- common filters file for all agent based sources (`smart-agent`,
  `otel-collector`, `prometheus-exporter`)
- rename `smart-agent_squid` module to `prometheus-exporter_squid`
- rework `prometheus-exporter_squid` improving naming and readme
- rename `smart-agent_kong` module to `prometheus-exporter_kong`
- fix heartbeat metric for `prometheus-exporter_squid`

--- a/modules/prometheus-exporter_squid/conf/03-total-requests.yaml
+++ b/modules/prometheus-exporter_squid/conf/03-total-requests.yaml
@@ -1,8 +1,9 @@
 module: squid
-name: total_requests
+name: total amount of requests
+id: total_requests
 
 transformation: true
-aggregation: false
+aggregation: true
 
 signals:
   signal:
