--- a/modules/integration_aws-backup/conf/02-aws-backup-copyjob-failed.yaml
+++ b/modules/integration_aws-backup/conf/02-aws-backup-copyjob-failed.yaml
@@ -18,5 +18,5 @@ rules:
   critical:
     threshold: 0
     comparator: ">"
-    lasting_duration: 1d
+    lasting_duration: 2h
     lasting_at_least: 0.9
