--- a/modules/prometheus-exporter_oracle/conf/03-pdbisdown.yaml
+++ b/modules/prometheus-exporter_oracle/conf/03-pdbisdown.yaml
@@ -1,5 +1,6 @@
 module: oracle
-name: pdbisdown
+name: "Pluggable database"
+id: pdbisdown
 
 transformation: true
 aggregation: true
@@ -12,4 +13,6 @@ rules:
   critical:
     threshold: 0
     comparator: ">"
-    lasting_duration: "5m"
+    lasting_duration: "5m"     
+    description: "is down"
+tip: "The pluggable database is not started, check the status from the container database which manage it"
