--- a/modules/prometheus-exporter_oracle/conf/06-fra.yaml
+++ b/modules/prometheus-exporter_oracle/conf/06-fra.yaml
@@ -1,5 +1,6 @@
 module: oracle
-name: fra_usage
+name: "fast recovery area usage"
+id: fra_usage
 
 transformation: true
 aggregation: true
@@ -13,7 +14,9 @@ rules:
     threshold: 85
     comparator: ">"
     lasting_duration: "5m"
+    description: "warning is reached"
   critical:
     threshold: 96
     comparator: ">"
     lasting_duration: "5m"
+    description: "critical is reached"
