--- a/modules/prometheus-exporter_oracle/conf/10-dbexport.yaml
+++ b/modules/prometheus-exporter_oracle/conf/10-dbexport.yaml
@@ -1,5 +1,6 @@
 module: oracle
-name: OracleDB_export
+name: "database last export"
+id: OracleDB_export
 
 transformation: true
 aggregation: true
@@ -13,3 +14,4 @@ rules:
     threshold: 0
     comparator: ">"
     lasting_duration: "5m"
+    decription: "is ko"
