--- a/modules/prometheus-exporter_oracle/conf/11-rmanincr.yaml
+++ b/modules/prometheus-exporter_oracle/conf/11-rmanincr.yaml
@@ -1,5 +1,6 @@
 module: oracle
-name: Oracle_RMAN_INCR
+name: "rman incremental backup"
+id: Oracle_RMAN_INCR
 
 transformation: true
 aggregation: true
@@ -13,3 +14,5 @@ rules:
     threshold: 0
     comparator: ">"
     lasting_duration: "60m"
+    decription: "is ko"
+tip: "Last rman incremental backup is ko, check logfiles"
