--- a/modules/prometheus-exporter_oracle/conf/15-tablespacepdb.yaml
+++ b/modules/prometheus-exporter_oracle/conf/15-tablespacepdb.yaml
@@ -1,5 +1,6 @@
 module: oracle
-name: Tablespace_PDB
+name: "tablespace usage on pluggable database"
+id: Tablespace_PDB
 
 transformation: true
 aggregation: true
@@ -13,3 +14,4 @@ rules:
     threshold: 90
     comparator: ">"
     lasting_duration: "15m"
+    description: "usage % detected"
