--- a/modules/prometheus-exporter_oracle/conf/18-dbvnet.yaml
+++ b/modules/prometheus-exporter_oracle/conf/18-dbvnet.yaml
@@ -1,5 +1,6 @@
 module: oracle
-name: dbvnet
+name: "process dbvnet"
+id: dbvnet
 
 transformation: true
 aggregation: true
@@ -13,3 +14,4 @@ rules:
     threshold: 1
     comparator: "<"
     lasting_duration: "5m"
+    description: "is not started"
