--- a/modules/prometheus-exporter_oracle/conf/02-dbisdown.yaml
+++ b/modules/prometheus-exporter_oracle/conf/02-dbisdown.yaml
@@ -3,11 +3,11 @@ name: "Database status"
 id: dbisdown
 
 transformation: true
-aggregation: true
-
+aggregation: ".mean(by=['job])"
 signals:
   signal:
     metric: oracledb_up
+    rollup: latest
 
 rules:
   critical:
