--- a/modules/prometheus-exporter_oracle/conf/03-pdbisdown.yaml
+++ b/modules/prometheus-exporter_oracle/conf/03-pdbisdown.yaml
@@ -3,11 +3,12 @@ name: "Pluggable database"
 id: pdbisdown
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['job])"
 
 signals:
   signal:
     metric: oracledb_Pdb_is_up_count
+    rollup: latest
 
 rules:
   critical:
