--- a/modules/prometheus-exporter_oracle/conf/09-stby.yaml
+++ b/modules/prometheus-exporter_oracle/conf/09-stby.yaml
@@ -3,11 +3,12 @@ name: "gap in standby database replication"
 id: STBY_Replication
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['job])"
 
 signals:
   signal:
     metric: oracledb_STBY_Replication_count 
+    rollup: latest
 
 rules:
   critical:
