--- a/modules/prometheus-exporter_oracle/conf/17-dbvagent.yaml
+++ b/modules/prometheus-exporter_oracle/conf/17-dbvagent.yaml
@@ -3,11 +3,12 @@ name: "process dbvagent"
 id: dbvagent
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['job])"
 
 signals:
   signal:
     metric: dbvagent
+    rollup: latest
 
 rules:
   critical:
