--- a/modules/prometheus-exporter_oracle/conf/18-dbvnet.yaml
+++ b/modules/prometheus-exporter_oracle/conf/18-dbvnet.yaml
@@ -3,11 +3,12 @@ name: "process dbvnet"
 id: dbvnet
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['job])"
 
 signals:
   signal:
     metric: dbvnet
+    rollup: latest
 
 rules:
   critical:
