--- a/modules/prometheus-exporter_oracle/conf/19-dbvctl.yaml
+++ b/modules/prometheus-exporter_oracle/conf/19-dbvctl.yaml
@@ -3,11 +3,12 @@ name: "process dbvctl"
 id: dbvctl
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['job])"
 
 signals:
   signal:
     metric: dbvctl
+    rollup: latest
 
 rules:
   critical:
