--- a/modules/prometheus-exporter_oracle/conf/08-processes.yaml
+++ b/modules/prometheus-exporter_oracle/conf/08-processes.yaml
@@ -3,11 +3,12 @@ name: "limit for processes"
 id: process_limits
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['job])"
 
 signals:
   signal:
     metric: oracledb_Process_limits_value 
+    rollup: latest
 
 rules:
   warning:
