--- a/modules/prometheus-exporter_oracle/conf/18-dbvnet.yaml
+++ b/modules/prometheus-exporter_oracle/conf/18-dbvnet.yaml
@@ -3,7 +3,7 @@ name: "process dbvnet"
 id: dbvnet
 
 transformation: true
-aggregation: ".mean(by=['job])"
+aggregation: ".mean(by=['job'])"
 
 signals:
   signal:
