--- a/modules/prometheus-exporter_oracle/conf/02-dbisdown.yaml
+++ b/modules/prometheus-exporter_oracle/conf/02-dbisdown.yaml
@@ -3,7 +3,7 @@ name: "Database status"
 id: dbisdown
 
 transformation: true
-aggregation: ".mean(by=['job])"
+aggregation: ".mean(by=['job'])"
 signals:
   signal:
     metric: oracledb_up
