--- a/modules/prometheus-exporter_oracle/conf/03-pdbisdown.yaml
+++ b/modules/prometheus-exporter_oracle/conf/03-pdbisdown.yaml
@@ -3,7 +3,7 @@ name: "Pluggable database"
 id: pdbisdown
 
 transformation: true
-aggregation: ".mean(by=['job])"
+aggregation: ".mean(by=['job'])"
 
 signals:
   signal:
