--- a/modules/prometheus-exporter_oracle/conf/10-dbexport.yaml
+++ b/modules/prometheus-exporter_oracle/conf/10-dbexport.yaml
@@ -3,7 +3,7 @@ name: "database last export"
 id: OracleDB_export
 
 transformation: true
-aggregation: ".mean(by=['job])"
+aggregation: ".mean(by=['job'])"
 
 signals:
   signal:
