--- a/modules/prometheus-exporter_oracle/conf/16-tablespace.yaml
+++ b/modules/prometheus-exporter_oracle/conf/16-tablespace.yaml
@@ -3,7 +3,7 @@ name: "tablespace usage on database"
 id: Tablespace_Single
 
 transformation: true
-aggregation: ".mean(by=['job])"
+aggregation: ".mean(by=['job'])"
 
 signals:
   signal:
