--- a/modules/prometheus-exporter_oracle/conf/01-listener.yaml
+++ b/modules/prometheus-exporter_oracle/conf/01-listener.yaml
@@ -3,7 +3,7 @@ name: "Process listener"
 id: listener
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['hostname'])"
 
 signals:
   signal:
