--- a/modules/prometheus-exporter_oracle/conf/09-stby.yaml
+++ b/modules/prometheus-exporter_oracle/conf/09-stby.yaml
@@ -3,7 +3,7 @@ name: "gap in standby database replication"
 id: STBY_Replication
 
 transformation: true
-aggregation: ".mean(by=['job'])"
+aggregation: ".mean(by=['dbname','dbtype','hostname'])"
 
 signals:
   signal:
