--- a/modules/prometheus-exporter_oracle/conf/05-alertlog.yaml
+++ b/modules/prometheus-exporter_oracle/conf/05-alertlog.yaml
@@ -3,7 +3,8 @@ name: "Alert.log"
 id: AlertLogError
 
 transformation: true
-aggregation: ".mean(by=['job'])"
+aggregation: ".mean(by=['dbname','dbtype','hostname'])"
+
 signals:
   signal:
     metric: oracledb_AlertLogError_count
