--- a/modules/prometheus-exporter_oracle/conf/08-processes.yaml
+++ b/modules/prometheus-exporter_oracle/conf/08-processes.yaml
@@ -3,7 +3,7 @@ name: "limit for processes"
 id: process_limits
 
 transformation: true
-aggregation: ".mean(by=['job'])"
+aggregation: ".mean(by=['dbname','dbtype','hostname'])"
 
 signals:
   signal:
