--- a/modules/prometheus-exporter_oracle/conf/11-rmanincr.yaml
+++ b/modules/prometheus-exporter_oracle/conf/11-rmanincr.yaml
@@ -3,7 +3,7 @@ name: "rman incremental backup"
 id: Oracle_RMAN_INCR
 
 transformation: true
-aggregation: ".mean(by=['job'])"
+aggregation: ".mean(by=['dbname','dbtype','hostname'])"
 
 signals:
   signal:
