--- a/modules/prometheus-exporter_oracle/conf/13-userexpire.yaml
+++ b/modules/prometheus-exporter_oracle/conf/13-userexpire.yaml
@@ -3,7 +3,7 @@ name: "user expiration"
 id: User_expiration
 
 transformation: true
-aggregation: ".mean(by=['job'])"
+aggregation: ".mean(by=['dbname','dbtype','hostname'])"
 
 signals:
   signal:
