--- a/modules/prometheus-exporter_oracle/conf/14-tablespacecdb.yaml
+++ b/modules/prometheus-exporter_oracle/conf/14-tablespacecdb.yaml
@@ -3,7 +3,7 @@ name: "tablespace usage on container database"
 id: Tablespace_CDB
 
 transformation: true
-aggregation: ".mean(by=['job'])"
+aggregation: ".mean(by=['dbname','dbtype','hostname'])"
 
 signals:
   signal:
