--- a/modules/prometheus-exporter_oracle/conf/15-tablespacepdb.yaml
+++ b/modules/prometheus-exporter_oracle/conf/15-tablespacepdb.yaml
@@ -3,7 +3,7 @@ name: "tablespace usage on pluggable database"
 id: Tablespace_PDB
 
 transformation: true
-aggregation: ".mean(by=['job'])"
+aggregation: ".mean(by=['dbname','dbtype','hostname'])"
 
 signals:
   signal:
