--- a/modules/prometheus-exporter_oracle/conf/00-heartbeat.yaml
+++ b/modules/prometheus-exporter_oracle/conf/00-heartbeat.yaml
@@ -1,7 +1,7 @@
 module: oracle
 name: heartbeat
 
-transformation: true
+transformation: false
 aggregation: ".mean(by=['hostname'])"
 
 exclude_not_running_vm: true
