--- a/modules/prometheus-exporter_oracle/conf/16-tablespace.yaml
+++ b/modules/prometheus-exporter_oracle/conf/16-tablespace.yaml
@@ -1,5 +1,5 @@
 module: oracle
-name: "tablespace usage on database"
+name: "tablespace usage on non-CDB database"
 id: Tablespace_Single
 
 transformation: true
@@ -15,4 +15,4 @@ rules:
     threshold: 90
     comparator: ">"
     lasting_duration: "15m"
-    description: "usage % detected"
+
