--- a/modules/prometheus-exporter_oracle/conf/14-tablespacecdb.yaml
+++ b/modules/prometheus-exporter_oracle/conf/14-tablespacecdb.yaml
@@ -14,4 +14,4 @@ rules:
     threshold: 90
     comparator: ">"
     lasting_duration: "15m"
-    decription: "usage % detected"
+    description: "usage % detected"
