--- a/modules/prometheus-exporter_oracle/conf/06-fra.yaml
+++ b/modules/prometheus-exporter_oracle/conf/06-fra.yaml
@@ -8,7 +8,7 @@ aggregation: ".mean(by=['dbname','dbtype','hostname'])"
 signals:
   signal:
     metric: oracledb_FRA_Usage_value
-    rollup: max
+    rollup: latest
 
 
 rules:
