--- a/modules/prometheus-exporter_oracle/conf/08-processes.yaml
+++ b/modules/prometheus-exporter_oracle/conf/08-processes.yaml
@@ -8,7 +8,7 @@ aggregation: ".mean(by=['dbname','dbtype','hostname'])"
 signals:
   signal:
     metric: oracledb_Process_limits_value 
-    rollup: max
+    rollup: latest
 
 rules:
   critical:
