--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -54,7 +54,7 @@ jobs:
           done
         done
         ./scripts/stack/bootstrap.sh
-        echo -e "module \"generated\" {\nsource=\"../../modules/internal_generator-${TF_VAR_environment}\"\n$(cat common/modules-args.txt)\n}" >> examples/stack/detectors.tf
+        echo -e "module \"generated\" {\nsource=\"../../modules/internal_generator-${TF_VAR_environment}\"\n$(cat common/modules-args.txt)\n}" > examples/stack/detectors.tf
 
     - name: Terraform init
       if: env.SFX_AUTH_TOKEN != null
