--- a/modules/smart-agent_system-common/conf/03-space.yaml
+++ b/modules/smart-agent_system-common/conf/03-space.yaml
@@ -6,6 +6,7 @@ value_unit: "%"
 signals:
   signal:
     metric: disk.utilization
+    filter: "not filter('fs_type', 'squashfs')"
 rules:
   critical:
     threshold: 90
