use right signalfx unit when available

--- a/modules/integration_aws-alb/conf/01-latency.yaml
+++ b/modules/integration_aws-alb/conf/01-latency.yaml
@@ -5,7 +5,7 @@ id: latency
 transformation: true
 aggregation: true
 filtering: "filter('namespace', 'AWS/ApplicationELB')"
-value_unit: "s"
+value_unit: "Second"
 
 signals:
   signal:
