--- a/modules/integration_azure-datafactory/conf/04-adf-integration-available-memory.yaml
+++ b/modules/integration_azure-datafactory/conf/04-adf-integration-available-memory.yaml
@@ -2,14 +2,14 @@ module: "Azure DataFactory"
 name: "Available Memory"
 filtering: "filter('resource_type', 'Microsoft.DataFactory/factories') and filter('primary_aggregation_type', 'true')"
 aggregation: ".sum(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
-value_unit: "MB"
+value_unit: "Mebibyte"
 transformation: ".min(over='15m')"
 signals:
   memory:
     metric: "IntegrationRuntimeAvailableMemory"
   signal:
     formula:
-      memory.scale(0.000000953674316) # Scale to MB unit
+      memory.scale(1/1024**2) # Scale to MiB unit
 rules:
   critical:
     threshold: 256
