--- a/modules/smart-agent_http/conf/04-content-length.yaml
+++ b/modules/smart-agent_http/conf/04-content-length.yaml
@@ -4,7 +4,7 @@ id: http_content_length
 
 transformation: true
 aggregation: true
-value_unit: bytes
+value_unit: "Byte"
 disabled: true
 
 signals:
