--- a/modules/integration_azure-storage-account/conf/02-capacity.yaml
+++ b/modules/integration_azure-storage-account/conf/02-capacity.yaml
@@ -3,13 +3,13 @@ name: "capacity"
 filtering: "filter('resource_type', 'Microsoft.Storage/storageAccounts') and filter('primary_aggregation_type', 'true')"
 aggregation: ".fill(None, duration='1d').sum(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 transformation: ".min(over='1d')"
-value_unit: PiB
+value_unit: "Pebibyte"
 signals:
   capacity:
     metric: "UsedCapacity"
   signal:
     formula:
-      capacity.scale(0.0000000000000008881784197001252) # Scale to PiB unit
+      capacity.scale(1/1024**5) # Scale to PiB unit
 rules:
   critical:
     threshold: 4.8
