--- a/modules/integration_gcp-load-balancing/conf/03-latency-service.yaml
+++ b/modules/integration_gcp-load-balancing/conf/03-latency-service.yaml
@@ -5,7 +5,7 @@ id: backend_latency_service
 transformation: true
 aggregation: ".sum(by=['forwarding_rule_name', 'backend_target_name'])"
 filtering: "filter('service', 'loadbalancing')"
-value_unit: "ms"
+value_unit: "Millisecond"
 
 signals:
   signal:
