--- a/modules/smart-agent_cassandra/conf/02-write-latency-p99.yaml
+++ b/modules/smart-agent_cassandra/conf/02-write-latency-p99.yaml
@@ -3,7 +3,7 @@ name: write latency 99th percentile
 
 transformation: true
 aggregation: true
-value_unit: s
+value_unit: "Second"
 
 signals:
   signal:
