improve readme note and auto update

--- a/modules/smart-agent_system-common/conf/readme.yaml
+++ b/modules/smart-agent_system-common/conf/readme.yaml
@@ -22,6 +22,11 @@ source_doc: |
 
   Inodes metrics areonly available for `Linux`).
 
+  #### Space
+  
+  You can exclude squashfs filesystems from the collect using `fsTypes: ["!squashfs"]` parameter in the agent configuration.
+  But we exclude it explicitly in related detector for safety to prevent any alert on this filesystem type.
+
   #### Load
 
   You have two choices to use load based detectors:
