--- a/modules/smart-agent_processes/conf/01-listener.yaml
+++ b/modules/smart-agent_processes/conf/01-listener.yaml
@@ -3,7 +3,7 @@ name: "Process listener"
 id: listener
 
 transformation: true
-aggregation: ".mean(by=['hostname'])"
+aggregation: true
 
 signals:
   signal:
