smart-agent_mysql: README
improve suggested configuration

--- a/modules/smart-agent_mysql/conf/readme.yaml
+++ b/modules/smart-agent_mysql/conf/readme.yaml
@@ -35,9 +35,9 @@ source_doc: |
   or follow instruction in [integration
   documentation](https://docs.signalfx.com/en/latest/integrations/integrations-reference/integrations.mysql.html#creating-a-mysql-user-for-collectd).
 
-  ### Examples
+  ### Suggested configuration
 
-  Here is a sample configuration fragment for the SignalFx agent monitors:
+  Here is a suggested configuration fragment for the SignalFx agent monitors:
 
   ```yaml
     - type: collectd/mysql
@@ -74,7 +74,11 @@ source_doc: |
         dbname: *mysqlDBName
         username: *mysqlUser
         password: *mysqlPass
+      # if `mysqlHost` is 'localhost' (unix socket connection) and `mysqlUser` have different right
+      # when connecting via tcp than unix socket
+      # you should use the second connectionString
       connectionString: '{{.username}}:{{.password}}@tcp({{.host}}:{{.port}})/{{.dbname}}'
+      #connectionString: '{{.username}}:{{.password}}@unix(/var/run/mysqld/mysqld.sock)/{{.dbname}}'
       queries:
         # Requires signalfx-agent >= v5.4.0
         - query: 'SHOW SLAVE STATUS;'
@@ -112,9 +116,13 @@ source_doc: |
               valueColumn: "Value"
   ```
 
-  __Note__: By default this configuration is for [standard
+  __Note__: This configuration should be your default for [standard
   deployment](https://github.com/claranet/terraform-signalfx-detectors/wiki/Guidance#deployment-mode).
-  You have to `disableHostDimensions: true` and add your MySQL server as `host` dimension in `extraDimensions`.
+  If the mysql server is not on the same host as the signalfx agent you have to:
+    * uncomment `disableHostDimensions: true`
+    * uncomment `host: *mysqlHost` in `extraDimensions`.
+
+  __Note__: If you deploy this configuration via ansible, you will need to escape `connectionString` with `{% raw %}…{% endraw %}`.
 
 notes: |
   The `mysql_threads_anomaly` detector monitors query rate change of all `mysql_commands.*` metrics but only
