--- a/modules/prometheus-exporter_oracledb/conf/readme.yaml
+++ b/modules/prometheus-exporter_oracledb/conf/readme.yaml
@@ -3,10 +3,8 @@ documentations:
     url: https://github.com/iamseth/oracledb_exporter
 
 source_doc: |
-  The detectors of this module uses defaults metrics from the [oracledb exporter] (https://github.com/iamseth/oracledb_exporter) and optionnaly custom metrics from custom templates which have to be specified during the deployment.  
+  The detectors of this module uses defaults metrics from the [oracledb exporter] (https://github.com/iamseth/oracledb_exporter) 
   Check its documentation to install and configure it appropriately with your Oracle database host.
-
-  by default in this module, only the metric oracledb_up is used with the default.metrics related to the [oracledb exporter]. 
 
   ### Examples
 
@@ -15,49 +13,54 @@ source_doc: |
   
   In this example we have an oracle instance which is running in Multitenant mode, means that we have one Container Database and one pluggable database. 
   
-  important : Both needs a dedicated prometheus port to upload metrics.
-  
-  {PATH_TO_ORACLEDB_BIN} = directory related to the oracledb_exporter binary which is used,
-  {PATH_TO_ORACLEDB_TEMPLATE} = directory related to the templates which are used (default & custom)
-  {ORACLE_HOME}= Oracle Home related to rdbms software
-  {TNS_PORT} = Oracle listener port on which the DB is listening.
-  {CONTAINER_DB} = name of the container DB (instance name)
-  {PLUGGABLE_DB} = name of the pluggable Database
-  {HOSTNAME} = name of the DB server host
+  _important_ : Both needs a dedicated prometheus port to upload metrics.
+ 
+  Environment variables used in the following sample configuration: 
+
+  - `PATH_TO_ORACLEDB_BIN` = directory where is located the oracledb_exporter binary
+  - `PATH_TO_ORACLEDB_TEMPLATE` = directory related to the templates which are used 
+  - `PROMETHEUS_PORT_X` = Port number for prometheus exporter opentelemetry collector
+  - `ORACLE_HOME` = Oracle Home related to rdbms software
+  - `TNS_PORT` = Oracle listener port on which the DB is listening.
+  - `CONTAINER_DB` = name of the container DB (instance name)
+  - `PLUGGABLE_DB` = name of the pluggable Database
+  - `USER` = Monitoring User which will connect to the target DB (container or pluggable)
+  - `PASSWORD` = Monitoring User Password
+
   
   ```yaml
 
   receivers:
     prometheus_exec/oracle-exporter-1:
-    exec: {PATH_TO_ORACLEDB_BIN}/oracledb_exporter --default.metrics "{PATH_TO_ORACLEDB_TEMPLATE}/default-metrics.toml" --log.level error --web.listen-address :{{port}}
-    port: {PROMETHEUS_PORT_1}
+    exec: ${PATH_TO_ORACLEDB_BIN}/oracledb_exporter --default.metrics "${PATH_TO_ORACLEDB_TEMPLATE}/default-metrics.toml" --log.level error --web.listen-address :{{port}}
+    port: ${PROMETHEUS_PORT_1}
     scrape_interval: 300s
     env:
       - name: DATA_SOURCE_NAME
-        value: "{USER}/{PASSWORD}@//localhost:{TNS_PORT}/{CONTAINER_DB}"
+        value: "${USER}/${PASSWORD}@//localhost:${TNS_PORT}/${CONTAINER_DB}"
       - name: LD_LIBRARY_PATH
-        value: "{ORACLE_HOME}/lib"
+        value: "${ORACLE_HOME}/lib"
       - name: ORACLE_HOME
-        value: "{ORACLE_HOME}"
+        value: "${ORACLE_HOME}"
   
     prometheus_exec/oracle-exporter-2:
-    exec: {PATH_TO_ORACLEDB_BIN}/oracledb_exporter --default.metrics "{PATH_TO_ORACLEDB_TEMPLATE}/default-metrics.toml" --log.level error --web.listen-address :{{port}}
-    port: {PROMETHEUS_PORT_2}
+    exec: ${PATH_TO_ORACLEDB_BIN}/oracledb_exporter --default.metrics "${PATH_TO_ORACLEDB_TEMPLATE}/default-metrics.toml" --log.level error --web.listen-address :{{port}}
+    port: ${PROMETHEUS_PORT_2}
     scrape_interval: 300s
     env:
       - name: DATA_SOURCE_NAME
-        value: "{USER}/{PASSWORD}@//localhost:{TNS_PORT}/{PLUGGABLE_DB}"
+        value: "${USER}/${PASSWORD}@//localhost:${TNS_PORT}/${PLUGGABLE_DB}"
       - name: LD_LIBRARY_PATH
-        value: "{ORACLE_HOME}/lib"
+        value: "${ORACLE_HOME}/lib"
       - name: ORACLE_HOME
-        value: "{ORACLE_HOME}"
+        value: "${ORACLE_HOME}"
   
   processors:
     resource/add_dimensions-dbname-1:
       attributes:
         - action: upsert
           key: dbname
-          value: {CONTAINER_DB}
+          value: ${CONTAINER_DB}
         - action: upsert
           key: dbtype
           value: container_DB
@@ -65,7 +68,7 @@ source_doc: |
       attributes:
         - action: upsert
           key: dbname
-          value: {PLUGGABLE_DB}
+          value: ${PLUGGABLE_DB}
         - action: upsert
           key: dbtype
           value: pluggable_DB
