--- a/modules/prometheus-exporter_oracledb/conf/readme.yaml
+++ b/modules/prometheus-exporter_oracledb/conf/readme.yaml
@@ -3,7 +3,7 @@ documentations:
     url: https://github.com/iamseth/oracledb_exporter
 
 source_doc: |
-  The detectors of this module uses defaults metrics from the [oracledb exporter] (https://github.com/iamseth/oracledb_exporter) 
+  The detectors of this module uses defaults metrics from the [oracledb exporter](https://github.com/iamseth/oracledb_exporter) 
   Check its documentation to install and configure it appropriately with your Oracle database host.
 
   ### Examples
@@ -13,7 +13,7 @@ source_doc: |
   
   In this example we have an oracle instance which is running in Multitenant mode, means that we have one Container Database and one pluggable database. 
   
-  _important_ : Both needs a dedicated prometheus port to upload metrics.
+  _Important_: Both needs a dedicated prometheus port to upload metrics.
  
   Environment variables used in the following sample configuration: 
 
@@ -29,7 +29,6 @@ source_doc: |
 
   
   ```yaml
-
   receivers:
     prometheus_exec/oracle-exporter-1:
     exec: ${PATH_TO_ORACLEDB_BIN}/oracledb_exporter --default.metrics "${PATH_TO_ORACLEDB_TEMPLATE}/default-metrics.toml" --log.level error --web.listen-address :{{port}}
