use sum stat for lambda detectors

--- a/modules/integration_aws-lambda/conf/02-throttles.yaml
+++ b/modules/integration_aws-lambda/conf/02-throttles.yaml
@@ -4,13 +4,13 @@ id: throttles
 
 transformation: ".sum(over='1h')"
 aggregation: true
-filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'mean') and filter('Resource', '*')"
+filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'sum') and filter('Resource', '*')"
 
 signals:
   signal:
     metric: Throttles
     extrapolation: last_value
-    rollup: average
+    rollup: sum
 rules:
   critical:
     threshold: 1
