--- a/modules/integration_aws-lambda/conf/01-errors-percentage.yaml
+++ b/modules/integration_aws-lambda/conf/01-errors-percentage.yaml
@@ -3,7 +3,7 @@ name: errors percentage
 id: pct_errors
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['FunctionName'])"
 filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'sum') and filter('Resource', '*')"
 value_unit: "%"
 
