--- a/modules/integration_aws-lambda/conf/02-throttles.yaml
+++ b/modules/integration_aws-lambda/conf/02-throttles.yaml
@@ -3,7 +3,7 @@ name: invocations throttled
 id: throttles
 
 transformation: ".sum(over='1h')"
-aggregation: true
+aggregation: ".mean(by=['FunctionName'])"
 filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'sum') and filter('Resource', '*')"
 
 signals:
