fix invocations function too

--- a/modules/integration_aws-lambda/conf/03-invocations.yaml
+++ b/modules/integration_aws-lambda/conf/03-invocations.yaml
@@ -9,7 +9,7 @@ disabled: true
 signals:
   signal:
     metric: Invocations
-    extrapolation: last_value
+    extrapolation: zero
     rollup: sum
 rules:
   major:
