--- a/modules/integration_aws-lambda/conf/readme.yaml
+++ b/modules/integration_aws-lambda/conf/readme.yaml
@@ -7,7 +7,7 @@ documentations:
 notes: |
   ### About `pct_errors` detector
 
-  * The detector uses a `latest` extrapolation to force the alert to remain until a new execution of the same lambda function
+  * This detector uses a `latest` extrapolation to force the alert to remain until a new execution of the same lambda function
   happens in success. Depending on the frequency at which the function executes, the alert may take time to self resolve.
 
   ### About `invocations` detector
