fix: heartbeat redshift only on cluster

--- a/modules/integration_aws-redshift/conf/00-heartbeat.yaml
+++ b/modules/integration_aws-redshift/conf/00-heartbeat.yaml
@@ -2,7 +2,7 @@ module: AWS Redshift
 name: heartbeat
 
 transformation: false
-aggregation: ".mean(by=['ClusterIdentifier', 'NodeID'])"
+aggregation: ".mean(by=['ClusterIdentifier'])"
 filtering: "filter('namespace', 'AWS/Redshift')"
 
 signals:
