smart-agent_system-common: rename "per_cpu_enabled" variable to "agent_per_cpu_enabled"

--- a/modules/smart-agent_system-common/conf/02-load.yaml
+++ b/modules/smart-agent_system-common/conf/02-load.yaml
@@ -8,7 +8,7 @@ signals:
   num_processors:
     metric: cpu.num_processors
   signal:
-    formula: '(${var.per_cpu_enabled ? "load" : "load/num_processors"})'
+    formula: '(${var.agent_per_cpu_enabled ? "load" : "load/num_processors"})'
 rules:
   critical:
     threshold: 2.5
