--- a/modules/integration_aws-redshift/conf/readme.yaml
+++ b/modules/integration_aws-redshift/conf/readme.yaml
@@ -1,7 +1,7 @@
 documentations:
-  - name: AWS metrics redshift
+  - name: CloudWatch metrics
     url: 'https://docs.aws.amazon.com/redshift/latest/mgmt/metrics-listing.html'
-  - name: Splunk metrics for AWS Redshift
+  - name: Splunk Observability metrics
     url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/aws/aws-metrics.html#amazon-redshift'
 
 source_doc:
