--- a/modules/integration_aws-apigateway/conf/readme.yaml
+++ b/modules/integration_aws-apigateway/conf/readme.yaml
@@ -1,3 +1,5 @@
 documentations:
   - name: CloudWatch metrics
     url: 'https://docs.aws.amazon.com/apigateway/latest/developerguide/api-gateway-metrics-and-dimensions.html'
+  - name: Splunk Observability metrics
+    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/aws/aws-metrics.html#aws-api-gateway'
