--- a/modules/integration_aws-elasticache-common/conf/readme.yaml
+++ b/modules/integration_aws-elasticache-common/conf/readme.yaml
@@ -3,3 +3,5 @@ documentations:
     url: 'https://docs.aws.amazon.com/AmazonElastiCache/latest/mem-ug/CacheMetrics.HostLevel.html'
   - name: Cloudwatch host-level metrics for Redis
     url: 'https://docs.aws.amazon.com/AmazonElastiCache/latest/red-ug/CacheMetrics.HostLevel.html'
+  - name: Splunk Observability metrics
+    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/aws/aws-metrics.html#amazon-elasticache'
