--- a/modules/integration_aws-elb/conf/readme.yaml
+++ b/modules/integration_aws-elb/conf/readme.yaml
@@ -1,3 +1,5 @@
 documentations:
   - name: CloudWatch metrics
     url: 'https://docs.aws.amazon.com/elasticloadbalancing/latest/classic/elb-cloudwatch-metrics.html'
+  - name: Splunk Observability metrics
+    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/aws/aws-metrics.html#aws-elb'
