--- a/modules/integration_aws-lambda/conf/readme.yaml
+++ b/modules/integration_aws-lambda/conf/readme.yaml
@@ -1,3 +1,5 @@
 documentations:
   - name: CloudWatch metrics
     url: 'https://docs.aws.amazon.com/lambda/latest/dg/monitoring-metrics.html'
+  - name: Splunk Observability metrics
+    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/aws/aws-metrics.html#aws-lambda'
