--- a/modules/integration_aws-rds-common/conf/readme.yaml
+++ b/modules/integration_aws-rds-common/conf/readme.yaml
@@ -1,3 +1,7 @@
 documentations:
   - name: CloudWatch metrics
+    url: 'https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/rds-metrics.html'
+  - name: CloudWatch guide
     url: 'https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/MonitoringOverview.html'
+  - name: Splunk Observability metrics
+    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/aws/aws-metrics.html#amazon-rds'
