--- a/modules/integration_azure-functions/conf/readme.yaml
+++ b/modules/integration_azure-functions/conf/readme.yaml
@@ -1,4 +1,6 @@
 documentations:
+  - name: Azure Monitor metrics
+    url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/platform/metrics-supported#microsoftwebsites'
   - name: SignalFx Azure Functions
     url: 'https://github.com/signalfx/integrations/tree/master/azure-functions'
 
