use sum stat for lambda detectors (#369)
* use sum stat for lambda detectors

* Apply suggestions from @pdecat

Co-authored-by: Patrick Decat <pdecat@gmail.com>

* force aggregation to drop erratic and undesired dimension sf_functionId

* fix invocations function too

* Update modules/integration_aws-lambda/conf/readme.yaml

Co-authored-by: Patrick Decat <pdecat@gmail.com>

* Update modules/integration_aws-lambda/README.md

Co-authored-by: Patrick Decat <pdecat@gmail.com>

* feat(aws/lambda): set default max_delay value to 600s

Co-authored-by: Patrick Decat <pdecat@gmail.com>
Co-authored-by: Patrick Decat <patrick.decat@fr.clara.net>

--- a/modules/integration_aws-lambda/conf/01-errors-percentage.yaml
+++ b/modules/integration_aws-lambda/conf/01-errors-percentage.yaml
@@ -3,19 +3,20 @@ name: errors percentage
 id: pct_errors
 
 transformation: true
-aggregation: true
-filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'mean') and filter('Resource', '*')"
+aggregation: ".mean(by=['FunctionName'])"
+filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'sum') and filter('Resource', '*')"
 value_unit: "%"
+max_delay: 600
 
 signals:
   errors:
     metric: Errors
     extrapolation: last_value
-    rollup: average
+    rollup: sum
   invocations:
     metric: Invocations
     extrapolation: last_value
-    rollup: average
+    rollup: sum
   signal:
     formula: (errors/invocations).scale(100).fill(value=0)
 rules:
