--- a/modules/integration_aws-lambda/conf/02-throttles.yaml
+++ b/modules/integration_aws-lambda/conf/02-throttles.yaml
@@ -3,14 +3,15 @@ name: invocations throttled
 id: throttles
 
 transformation: ".sum(over='1h')"
-aggregation: true
-filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'mean') and filter('Resource', '*')"
+aggregation: ".mean(by=['FunctionName'])"
+filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'sum') and filter('Resource', '*')"
+max_delay: 600
 
 signals:
   signal:
     metric: Throttles
     extrapolation: last_value
-    rollup: average
+    rollup: sum
 rules:
   critical:
     threshold: 1
