--- a/modules/integration_aws-lambda/conf/03-invocations.yaml
+++ b/modules/integration_aws-lambda/conf/03-invocations.yaml
@@ -2,15 +2,16 @@ module: AWS Lambda
 name: invocations
 
 transformation: ".sum(over='1h')"
-aggregation: true
-filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'mean') and filter('Resource', '*')"
+aggregation: ".mean(by=['FunctionName'])"
+filtering: "filter('namespace', 'AWS/Lambda') and filter('stat', 'sum') and filter('Resource', '*')"
 disabled: true
+max_delay: 600
 
 signals:
   signal:
     metric: Invocations
-    extrapolation: last_value
-    rollup: average
+    extrapolation: zero
+    rollup: sum
 rules:
   major:
     threshold: 1
